// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`quote > Empty quote 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [],
        "raw": ">",
        "type": "quote",
      },
    ],
    "type": "line",
  },
]
`;

exports[`quote > Simple quote 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [
          {
            "raw": " Simple quote",
            "text": " Simple quote",
            "type": "plain",
          },
        ],
        "raw": "> Simple quote",
        "type": "quote",
      },
    ],
    "type": "line",
  },
]
`;
